--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -8,7 +8,7 @@
 @product-content-size: 150px;
 // @product-content-size: 64PX;
 @product-title-font: 32px;
-@product-title-color: #444444;
+@product-title-color: #525252;
 @product-price-font: 30px;
 @product-price-color: #FC4E44;
 @product-normal-color: #cccccc;
@@ -64,8 +64,7 @@
   &-title {
     width: @product-content-width;
     font-size: @product-title-font;
-    line-height: @product-title-font;
-    height: @product-title-font * 2;
+    line-height: @product-title-font + 4px;
     color: @product-title-color;
     font-weight: bold;
     display: -webkit-box;
