--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -57,17 +57,20 @@ button {
 }
 
 .item-extra__info {
-  font-size: 26px !important;
+  font-size: 30px !important;
   line-height: 32px !important;
   color: #999999 !important;
 }
 
 .at-input__input {
-  font-size: 26px !important;
+  font-size: 30px !important;
 }
 
 .at-modal__container {
   width: 590px !important;
+  border-radius: 30px !important;
+  top: 10% !important;
+  transform: translate(-50%) !important;
 }
 
 .layout-body {
