--- a/src/component/card/style.sass
+++ b/src/component/card/style.sass
@@ -34,7 +34,7 @@ $at-list-item-horizontal-padding: 24px;
     color: $at-list-text-color;
     font-size: $font-size-lg;
     line-height: $line-height-zh;
-    @include active;
+    // @include active;
     @include hairline-bottom-relative($left: $spacing-h-lg);
 
     &--thumb {
