--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -11,6 +11,7 @@
 @product-price-color: #FC4E44;
 @cart-list-header-font-color: #808080; // 购物车列表头部字体颜色
 @product-normal-color: #cccccc;
+@cart-scan-size: 162px;
 
 .@{cart-prefix} {
   position: fixed;
@@ -26,6 +27,17 @@
       .padding(414px, r);
     }
   }
+  &-scan {
+    position: absolute;
+    bottom: 60px;
+    width: @cart-scan-size;
+    height: @cart-scan-size;
+    left: (750px - @cart-scan-size) / 2;
+    &-image {
+      width: 100%;
+      height: 100%;
+    }
+  }
   &-right {
     position: absolute;
     right: 0;
@@ -38,6 +50,9 @@
     &-suspension {
       width: 414px;
       flex-direction: row;
+      &-text {
+        font-size: 32px;
+      }
       &-icon {
         width: 36px;
         height: 36px;
@@ -116,8 +131,8 @@
   }
   &-icon {
     position: absolute;
-    left: 40px;
-    bottom: 55px;
+    left: 30px;
+    bottom: 30px;
     &-image {
       width: @cart-icon-size;
       height: @cart-icon-size;
