--- a/src/component/modal/modal.less
+++ b/src/component/modal/modal.less
@@ -1,7 +1,8 @@
 @import "../../styles/theme.less";
 
-@modal-header-font: 32px;                   // modal 标题字体大小
-@modal-header-max-size: 310px;    
+@modal-header-font: 36px;                   // modal 标题字体大小
+@modal-header-color: #4d4d4d;
+@modal-header-max-size: 400px;    
 @modal-button-font: 30px;                   // modal 标题按钮字体大小
 @modal-font-color: #ffffff;               // modal 字体颜色
 @modal-button-height: 60px;                 // modal 按钮高度
@@ -11,14 +12,19 @@
 @modal-prefix: component-modal;
 
 .@{modal-prefix} {
+  background-color: #ffffff;
   &-header {
-    .padding(22px, tb);
+    .padding(50px, tb);
     .flex(center, center, row);
-    color: @modal-font-color;
-    font-size: @modal-header-font;
-    background: linear-gradient(0deg,rgba(42,134,252,1) 2%,rgba(69,150,255,1) 100%);
     &-text {
+      font-weight: bold;
+      color: @modal-header-color;
       max-width: @modal-header-max-size;
+      font-size: @modal-header-font;
+      line-height: @modal-header-font;
+      height: @modal-header-font;
+      overflow: hidden;
+      text-align: center;
     }
   }
   &-buttons {
@@ -28,9 +34,50 @@
     .padding(50px, b);
   }
   &-content {
-    .padding(32px);
-    .flex(center, center);
-    font-size: 26px;
-    color: @base-font-color;
+    .padding(40px, lr);
+    .padding(5px, t);
+    .padding(46px, b);
+    display: flex;
+    flex-direction: column;
+    &-tip {
+      font-size: 26px;
+      color: #999999;
+      .margin(27px, b);
+    }
+    &-item {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      .margin(14px, b);
+      position: relative;
+      &-title {
+        position: relative;
+        font-size: 30px;
+        min-width: 120px;
+        color: #4d4d4d;
+        display: flex;
+        justify-content: flex-end;
+        .margin(22px, r);
+        &-main {
+          position: absolute;
+          top: 0;
+          left: 0;
+          color: #FC4E44;
+          font-size: 32px;
+        }
+      }
+      &-input {
+        background-color: #F8F8FA;
+        border-radius: 20px;
+        width: 360px;
+        height: 74px;
+        font-size: 30px;
+        .padding(30px, lr);
+        &-place {
+          font-size: 30px;
+          color: #cccccc;
+        }
+      }
+    }
   }
 }
