--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -24,6 +24,8 @@
     margin-top: -150px;
   }
   &-bg {
+    position: relative;
+    z-index: 100;
     height: 255px;
     width: 100%;
     &-color {
@@ -74,6 +76,25 @@
   &-detail {
     .flex(center, center, column);
     .padding((40px + 15px), t);
+    &-zindex {
+      position: relative;
+      z-index: 1000;
+    }
+    &-name {
+      position: relative;
+      &-level {
+        position: absolute;
+        top: 8px;
+        // width: 60px;
+        right: -80px - 20px;
+        font-size: 16px;
+        color: #D8AE6D;
+        border: 2px solid #D8AE6D;
+        border-radius: 10px;
+        .padding(5px, tb);
+        .padding(10px, lr);
+      }
+    }
     &-img {
       position: absolute;
       left: (@member-card-width - @member-avator-size) / 2;
@@ -117,6 +138,19 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    &-bg {
+      position: relative;
+      height: 172px;
+    }
+    &-button {
+      .flex(center, center, column) !important;
+    }
+    &-card {
+      position: relative;
+      .margin(30px, l);
+      z-index: 100;
+      .margin(24px, t);
+    }
     &-header {
       z-index: 100;
       .padding(20px, tb);
