--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -207,18 +207,27 @@
   }
 
   &-detail {
+    background-color: #f2f2f2;
     &-cover {
       width: 100%;
       height: 380px;
       &-image {
         width: 100%;
         height: 100%;
+        &-background {
+          background-repeat: no-repeat;
+          background-size: contain;
+          background-position: center center;
+        }
       }
     }
     &-list {
       width: 100%;
       .padding(30px, lr);
       .padding(20px, t);
+    }
+    &-textarea {
+      width: 450rpx;
     }
     &-submit {
       .margin(60px, tb);
@@ -274,6 +283,20 @@
         width: 320px;
       }
     }
+    &-more {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      font-size: 30px;
+      color: #333333;
+      .margin(38px, tb);
+      .padding(36px, lr);
+      &-image {
+        width: 24px;
+        height: 13px;
+        .margin(14px, l);
+      }
+    }
   }
   &-manage {
     &-list {
@@ -290,7 +313,7 @@
   
   &-pay {
     height: 100%;
-    background-color: #f9f9f9;
+    background-color: #f2f2f2;
     .padding(20px);
     &-card {
       .margin(20px, t);
