--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-12-11 11:55:18
+ * @Last Modified time: 2019-12-20 13:59:29
  */
 
 // 主色调
@@ -51,6 +51,9 @@
 .container {
   width: 100%;
   height: 100%;
+  &-color {
+    background-color: #f2f2f2;
+  }
 }
 
 .flex (@alignItems: flex-start, @justifyContent: flex-start, @flexDirection: row) {
@@ -174,7 +177,7 @@
 }
 
 .theme-shadow {
-  box-shadow: 0px 1px 20px #e6f3fd;
+  // box-shadow: 0px 1px 20px #e6f3fd;
 }
 
 /**
@@ -202,16 +205,16 @@
  * @Last Modified by: Ghan
  * Modal 部分配置
  */
-@modal-button-height: 60px;                 // modal 按钮高度
+@modal-button-height: 66px;                 // modal 按钮高度
 
 .component-modal-cancel-button {
   .config-button(#999999, @modal-button-height, @modal-button-height / 2,  30px);
-  .padding(80px, lr) !important;
+  .padding(86px, lr) !important;
 }
 
 .component-modal-confirm-button {
   .config-button(@theme-color, @modal-button-height, @modal-button-height / 2,  30px);
-  .padding(80px, lr) !important;
+  .padding(86px, lr) !important;
 }
 
 /**
@@ -248,6 +251,7 @@
   }
   &-input {
     .padding(0px, tb) !important;
+    font-size: 30px !important;
     &-placeholder {
       font-size: 30px !important;
       color: #cccccc !important;
