* 修改 第三期修改

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -88,7 +88,10 @@
     }
     &-cancel {
       border-color: #E6E6E6;
-      color: #E6E6E6;
+      color: #999999;
     }
+  }
+  &-input {
+    max-width: 380px;
   }
 }
