--- a/src/component/card/style.sass
+++ b/src/component/card/style.sass
@@ -34,8 +34,18 @@ $at-list-item-horizontal-padding: 24px;
     color: $at-list-text-color;
     font-size: $font-size-lg;
     line-height: $line-height-zh;
-    // @include active;
-    @include hairline-bottom-relative($left: $spacing-h-lg);
+
+    // @include hairline-bottom-relative($left: $spacing-h-lg);
+    &::after {
+      @include hairline-common();
+
+      top: auto;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transform: scaleY(0.5);
+      border-bottom: 1px solid #e3e3e3;
+    }
 
     &--thumb {
       .item-thumb {
