--- a/src/component/cart/layout.sass
+++ b/src/component/cart/layout.sass
@@ -24,7 +24,7 @@ $float-layout-timer: 300ms;
     position: absolute;
     bottom: 0;
     width: 100%;
-    min-height: $float-layout-height-min;
+    // min-height: $float-layout-height-min;
     max-height: $float-layout-height-max;
     background-color: $color-bg;
     transform: translate3d(0, 100%, 0);
@@ -82,10 +82,10 @@ $float-layout-timer: 300ms;
 
     &-body {
       font-size: $font-size-base;
-      padding-bottom: 200px;
+      padding-bottom: 128px;
 
       &__content {
-        height: 600px;
+        max-height: 600px;
       }
     }
   }
