--- a/src/component/modal/modal.less
+++ b/src/component/modal/modal.less
@@ -55,13 +55,11 @@
         font-size: 30px;
         min-width: 120px;
         color: #4d4d4d;
-        display: flex;
-        justify-content: flex-end;
         .margin(22px, r);
         &-main {
           position: absolute;
           top: 0;
-          left: 0;
+          left: -20px;
           color: #FC4E44;
           font-size: 32px;
         }
