--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -73,12 +73,6 @@ button {
   transform: translate(-50%) !important;
 }
 
-.layout-body {
-  .padding(0px, lr) !important;
-  .padding(0px, t) !important;
-  .padding(200px, b) !important;
-}
-
 .at-button--circle {
   min-width: 60rpx !important;
   max-width: 60rpx !important;
@@ -93,4 +87,9 @@ button {
 .component-cart-bge .at-badge__num {
   right: 12PX !important;
   top: 2PX !important;
+}
+
+
+.layout-body {
+  padding: 0px !important;
 }
