--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -51,7 +51,8 @@
       width: 414px;
       flex-direction: row;
       &-text {
-        font-size: 32px;
+        font-size: 36px;
+        font-weight: bold;
       }
       &-icon {
         width: 36px;
@@ -108,6 +109,8 @@
       .margin(20px, r);
       &-active {
         color: #ffffff;
+        position: relative;
+        z-index: 100;
       }
       &-disabled {
         color: #8B8B8B;
@@ -166,6 +169,9 @@
       .flex(center, space-between, row);
       &-name {
         width: 300px;
+        height: 27px;
+        line-height: 27px;
+        overflow: hidden;
         font-size: @normal-text-fontsize;
         color: @product-name-color;
       }
