--- a/src/pages/style/pay.less
+++ b/src/pages/style/pay.less
@@ -34,6 +34,9 @@
         &-active {
           border-bottom: 4px solid #ffffff;
         }
+        &-disabled {
+          opacity: 0.6;
+        }
       }
     }
     &-content {
@@ -114,6 +117,7 @@
         }
         &-input {
           width: 100%;
+          height: 100%;
           font-size: 50px;
           color: #444444;
           font-weight: bold;
