* 修改 第四次测试

--- a/src/component/badge/style.sass
+++ b/src/component/badge/style.sass
@@ -30,8 +30,8 @@ $at-badge-box-shadow: 0 4px 8px 0 rgba($color: $at-badge-bg-color, $alpha: 0.2);
     display: flex;
     align-items: center;
     justify-content: center;
-    top: -$at-badge-border-radius;
-    right: -6PX;
+    top: -7px;
+    right: 0px;
     color: $at-badge-color;
     font-size: 26px;
     border-radius: 25px;
