--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -188,4 +188,24 @@
       .flex(center, center, row);
     }
   }
+
+  &-buttons {
+    &-button {
+      color: #ffffff;
+      font-size: 32px;
+      .flex(center, center, row);
+      height: 66px;
+      border-radius: 33px;
+      width: 100%;
+    }
+    &-two {
+      width: 320px;
+    }
+    &-confirm {
+      background-color: @theme-color;
+    }
+    &-cancel {
+      background-color: #999999;
+    }
+  }
 }
