--- a/src/component/modal/modal.less
+++ b/src/component/modal/modal.less
@@ -63,11 +63,15 @@
           color: #FC4E44;
           font-size: 32px;
         }
+        &-short {
+          min-width: 70px !important;
+        }
       }
       &-input {
         background-color: #F8F8FA;
         border-radius: 20px;
-        width: 360px;
+        // width: 360px;
+        flex: 1;
         height: 74px;
         font-size: 30px;
         .padding(30px, lr);
