--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -35,4 +35,20 @@
     .flex(center, flex-end, column);
     font-size: 30px;
   }
+  &-no {
+    font-size: 30px;
+    line-height: 30px;
+    color: #333333;
+  }
+  &-time {
+    font-size: 26px;
+    line-height: 26px;
+    color: #666666;
+    .margin(17px, t);
+  }
+  &-price {
+    font-size: 30px;
+    color: #4d4d4d;
+    font-weight: 500;
+  }
 }
