--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -8,10 +8,10 @@
 @product-content-size: 150px;
 // @product-content-size: 64PX;
 @product-title-font: 32px;
-@product-title-color: #666666;
+@product-title-color: #525252;
 @product-price-font: 30px;
 @product-price-color: #FC4E44;
-@product-normal-color: #cccccc;
+@product-normal-color: #999999;
 
 @product-padding: 10px;
 @product-manage-padding: 25px;
@@ -66,7 +66,6 @@
     font-size: @product-title-font;
     // line-height: @product-title-font + 4px;
     color: @product-title-color;
-    font-weight: bold;
     display: -webkit-box;
     overflow: hidden;
     text-overflow: ellipsis;
