--- a/src/pages/style/pay.less
+++ b/src/pages/style/pay.less
@@ -99,7 +99,7 @@
       flex-direction: column;
       .padding(40px);
       &-title {
-        font-size: 26px;
+        font-size: 30px;
         color: #666666;
       }
       &-input {
@@ -123,6 +123,7 @@
           font-weight: bold;
           &-placeholder {
             font-size: 30px;
+            color: #cccccc;
             font-weight: normal;
           }
         }
