* 修改 第四次UI细节调整

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -93,5 +93,10 @@
   }
   &-input {
     max-width: 380px;
+    &-max {
+      position: absolute;
+      right: 0;
+      width: 450px !important;
+    }
   }
 }
