--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -28,8 +28,9 @@
     border-radius: 20px;
     overflow: hidden;
     position: absolute;
-    top: 20px + 140px + 24px + 60px + 20px + 60px;
-    bottom: 50px;
+    top: 20px + 140px + 24px + 60px + 20px + 20px + 14px;
+    // bottom: 50px;
+    bottom: 0;
     width: 690px;
     .margin(30px, l);
     &-list {
@@ -87,7 +88,8 @@
     position: relative;
     background-color: #ffffff;
     &-buttons {
-      .padding(40px, tb) !important;
+      line-height: 1;
+      .padding(37px, tb) !important;
     }
     &-header {
       .flex(center, center, row);
