--- a/src/pages/style/home.less
+++ b/src/pages/style/home.less
@@ -65,6 +65,9 @@
         flex-direction: row;
         align-items: center;
       }
+      &-mar {
+        .margin(14px, t);
+      }
       &-icon {
         width: 46px;
         height: 46px;
