--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -31,7 +31,6 @@
     top: 60px + 20px + 20px;
     left: 0;
     right: 0;
-    bottom: 20px;
     width: 690px;
     background-color: #ffffff;
     border-radius: 20px;
@@ -47,9 +46,7 @@
   &-time {
     .flex(center, center, row) !important;
     width: 100%;
-    .padding(40px, l);
-    .padding(30px, r);
-    .padding(32px, tb);
+    height: 100px;
     border-bottom: 1px solid  #e3e3e3;
     &-date {
       .margin(30px, lr);
@@ -91,6 +88,9 @@
     &-bottom {
       border-radius: 0 0 20px 20px;
       .margin(30px, b);
+    }
+    &-empty {
+      .padding(250px, b);
     }
   }
 
