--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -151,6 +151,14 @@
         }
       }
     }
+    &-bottom {
+      width: 100%;
+      .flex(center, center, row);
+      font-size: 26px;
+      line-height: 26px;
+      color: #b2b2b2;
+      .margin(44px, t);
+    }
     &-section {
       background-color: @product-section-color;
       .padding(16px, tb);
@@ -173,6 +181,7 @@
     &-header {
       position: relative;
       font-size: 38px;
+      line-height: 38px;
       color: @base-font-color;
       font-weight: bold;
       .padding(40px, t);
@@ -193,7 +202,7 @@
       display: flex;
       flex-direction: column;
       .padding(34px, lr);
-      .padding(120px, b);
+      .padding(135px, b);
       &-button {
         .margin(0px, l) !important;
         .margin(18px, r) !important;
@@ -358,19 +367,17 @@
   &-pay {
     height: 100%;
     background-color: #f2f2f2;
-    .padding(20px);
+    .padding(20px, tb);
     .padding(6px, t);
     &-card {
       .margin(20px, t);
     }
     &-container {
       .padding(@cart-height + 50px, b);
-      // position: absolute;
-      // top: 0;
-      // bottom: @cart-height + 10px;
-      // width: 100%;
-      // display: flex;
-      // flex-direction: column;
+    }
+    &-pos {
+      .padding(20px, lr);
+      background-color: #f2f2f2;
     }
     &-list {
       .padding(20px);
@@ -499,6 +506,7 @@
     }
   }
   &-row {
+    position: relative;
     .padding(24px, tb);
     .padding(40px, lr);
     &-icon {
@@ -526,8 +534,14 @@
     &-name {
       font-size: 30px;
       color: #444444;
-      max-width: 400px;
+      width: 400px;
       font-weight: bold;
+      display: -webkit-box;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      line-clamp: 1;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
     }
     &-price {
       font-size: 28px;
