--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -142,6 +142,9 @@
           top: 0px;
           bottom: 0px;
         }
+        &-inventory {
+          top: 0 !important;
+        }
       }
       &-header {
         border-bottom: 1px solid #f9f9f9;
