--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -349,6 +349,9 @@
       &-button {
         width: 320px;
       }
+      &-one {
+        width: 100%;
+      }
     }
     &-more {
       display: flex;
