--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -103,6 +103,11 @@
     .flex(center, space-between);
     height: 100%;
     .padding(170px, l);
+    &-purchase {
+      .padding(30px, l);
+      .padding(20px, t);
+      color: #ffffff;
+    }
     &-price {
       font-size: 40px;
       font-weight: bold;
