--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -115,6 +115,11 @@
         height: @order-status-icon;
         .margin(20px, r);
       }
+      &-purchase {
+        width: 92px;
+        height: 92px;
+        .margin(20px, r);
+      }
       &-copy {
         width: 22px;
         height: 23px;
