--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -93,3 +93,24 @@ button {
 .layout-body {
   padding: 0px !important;
 }
+
+.at-tabs__header {
+  background-color: #2a86fc;
+  padding-left: 35px !important;
+  padding-right: 80px !important;
+}
+
+.at-tabs__item {
+  background-color: #2a86fc !important;
+  color: #9DC8FF !important;
+  font-size: 28px !important;
+}
+.at-tabs__item--active {
+  color: #ffffff !important;
+}
+
+.at-tabs__item-underline {
+  background-color: #ffffff !important;
+  height: 4px !important;
+  bottom: 7px !important;
+}
