--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -104,9 +104,25 @@
     height: 100%;
     .padding(170px, l);
     &-purchase {
-      .padding(30px, l);
-      .padding(20px, t);
-      color: #ffffff;
+      .padding(60px, l);
+      .padding(15px, t);
+      &-box {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
+      &-text {
+        color: #8C8C8C;
+        font-size: 30px;
+      }
+      &-price {
+        font-size: 40px;
+        color: #8C8C8C;
+        font-weight: bold;
+      }
+      &-active {
+        color: #ffffff;
+      }
     }
     &-price {
       font-size: 40px;
@@ -134,6 +150,14 @@
         border: 1px solid #696969;
         color: #666666;
         font-size: 26px;
+      }
+    }
+    &-image {
+      width: 18px;
+      height: 10px;
+      .margin(18px, l);
+      &-down {
+        transform: rotate(180deg);
       }
     }
   }
@@ -167,10 +191,20 @@
 
   &-product {
     .padding(35px);
+    display: flex;
+    flex-direction: row;
     &-border {
       border-bottom: 1px solid @product-border-color;
     }
+    &-delete {
+      .padding(23px, lr);
+      &-img {
+        width: 18px;
+        height: 18px;
+      }
+    }
     &-container {
+      flex: 1;
       .flex(center, space-between, row);
       &-name {
         width: 300px;
@@ -191,6 +225,10 @@
     }
     &-stepper {
       .flex(center, center, row);
+      &-purchase {
+        font-size: 30px;
+        color: @theme-color;
+      }
     }
   }
 
