--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -127,9 +127,14 @@
     bottom: 0;
     &-purchase {
       bottom: 20px;
-      font-size: 34px;
+      font-size: 36px;
       font-weight: bold;
       color: @theme-color;
+    }
+    &-edit {
+      width: 32px;
+      height: 29px;
+      .margin(11px, l);
     }
     &-container {
       .flex(center, center, row);
