--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-12-27 10:32:00
+ * @Last Modified time: 2020-01-09 16:21:08
  */
 
 // 主色调
@@ -46,6 +46,21 @@
 .small-text {
   font-size: @small-text-fontsize;
   color: @small-text-color;
+}
+
+.border1px {
+  content: '';
+  position: absolute;
+  transform-origin: center;
+  box-sizing: border-box;
+  pointer-events: none;
+  
+  top: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: scaleY(0.5);
+  border-bottom: 1px solid #e3e3e3;
 }
 
 .container {
