--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -31,6 +31,7 @@
     top: 60px + 20px + 20px;
     left: 0;
     right: 0;
+    bottom: 0;
     width: 690px;
     background-color: #ffffff;
     border-radius: 20px;
@@ -44,6 +45,7 @@
     .margin(30px, lr);
   }
   &-time {
+    position: relative;
     .flex(center, center, row) !important;
     width: 100%;
     height: 100px;
@@ -51,12 +53,22 @@
     &-date {
       .margin(30px, lr);
       min-width: 160px;
-      color: #333333;
-      font-size: 30px;
+      color: #4d4d4d;
+      font-size: 28px;
       .flex(center, center, row);
     }
     &-box {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      .flex(center, center);
       .padding(30px, lr);
+      &-left {
+        left: 0;
+      }
+      &-right {
+        right: 0
+      }
     }
     &-text {
       color: #666666;
@@ -71,9 +83,19 @@
       height: 10px;
       width: 18px;
     }
+    &-rili {
+      width: 30px;
+      height: 29px;
+      .margin(12px, r);
+    }
   }
   &-list {
     height: 100%;
+    &-pos {
+      position: absolute;
+      top: 100px;
+      bottom: 0;
+    }
     &-item {
       width: 100%;
       .padding(40px, l);
